Iniciada Estilização/Porta 1-4 Concluídas

--- a/html files/porta1.html
+++ b/html files/porta1.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div class="center">
-  <h1>Escolha sua sub-porta</h1>
+  <h1>Você Escolheu a Porta 1 MUAHAHA!!! PROSSIGA HUMANO</h1>
   <div class="doors">
-    <a href="porta11.html" class="door">Porta 11</a>
-    <a href="porta12.html" class="door">Porta 12</a>
-    <a href="porta13.html" class="door">Porta 13</a>
-    <a href="porta14.html" class="door">Porta 14</a>
+    <a href="porta11.html" class="door">Porta A1</a>
+    <a href="porta12.html" class="door">Porta B1</a>
+    <a href="porta13.html" class="door">Porta C1</a>
+    <a href="porta14.html" class="door">Porta D1</a>
   </div>
 </div>
 </body>
