Atualização HTML CSS JS

--- a/html files/porta3.html
+++ b/html files/porta3.html
@@ -16,5 +16,7 @@
         <a href="porta34.html" class="door">Porta D1</a>
     </div>
 </div>
+<script src="script.js"></script>
+
 </body>
 </html>
