--- a/html files/index.html
+++ b/html files/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title>Jogo das Portas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="center">
-    <a href="porta0.html" class="btn">INICIAR</a>
-</div>
+    <div class="center-btn" id="inicio">
+        <a href="#" class="btn" id="start-btn">Iniciar</a>
+    </div>
+
+<!-- Página da Porta 0 (Oculta inicialmente) -->
+    <div class="center" id="porta0" style="display: none;">
+        <h1>Choose Your Destiny!</h1>
+            <div class="doors">
+                <a href="#" class="door" id="portaA">Porta A</a>
+                <a href="#" class="door" id="portaB">Porta B</a>
+                <a href="#" class="door" id="portaC">Porta C</a>
+                <a href="#" class="door" id="portaD">Porta D</a>
+            </div>
+    </div>
 </body>
 </html>
