Estágio: Nível 3 Concluído, porém todas portas estão corretas

--- a/html files/index.html
+++ b/html files/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="center-btn" id="inicio">
-        <a href="#" class="btn" id="start-btn">Iniciar</a>
-    </div>
+<div class="center-btn" id="inicio">
+    <a href="#" class="btn" id="start-btn">Iniciar</a>
+</div>
 
 <!-- Página da Porta 0 (Oculta inicialmente) -->
-    <div class="center" id="porta0" style="display: none;">
-        <h1>Choose Your Destiny!</h1>
-            <div class="doors">
-                <a href="#" class="door" id="portaA">Porta A</a>
-                <a href="#" class="door" id="portaB">Porta B</a>
-                <a href="#" class="door" id="portaC">Porta C</a>
-                <a href="#" class="door" id="portaD">Porta D</a>
-            </div>
+<div class="center" id="porta0" style="display: none;">
+    <h1>Choose Your Destiny!</h1>
+    <div class="doors">
+        <a href="#" class="door" id="portaA">Porta A</a>
+        <a href="#" class="door" id="portaB">Porta B</a>
+        <a href="#" class="door" id="portaC">Porta C</a>
+        <a href="#" class="door" id="portaD">Porta D</a>
     </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
