Cartas Atualizadas com Imagens

--- a/html files/index.html
+++ b/html files/index.html
@@ -11,16 +11,110 @@
     <a href="#" class="btn" id="start-btn">Iniciar</a>
 </div>
 
-<!-- Página da Porta 0 (Oculta inicialmente) -->
-<div class="center" id="porta0" style="display: none;">
-    <h1>Choose Your Destiny!</h1>
-    <div class="doors">
-        <a href="#" class="door" id="portaA">Porta A</a>
-        <a href="#" class="door" id="portaB">Porta B</a>
-        <a href="#" class="door" id="portaC">Porta C</a>
-        <a href="#" class="door" id="portaD">Porta D</a>
+<!-- Tela do jogo (Oculta inicialmente) -->
+    <div class="center" id="porta0" style="display: none;">
+        <h1>Choose Your Destiny!</h1>
+        <div class="doors">
+            <div class="door-image" id="img1">
+                <img src="img/image1.jpg" alt="img1">
+            </div>
+            <div class="door-image" id="img2">
+                <img src="img/image2.jpg" alt="img3">
+            </div>
+            <div class="door-image" id="img3">
+                <img src="img/image3.jpg" alt="img3">
+            </div>
+            <div class="door-image" id="img4">
+                <img src="img/image4.jpg" alt="img4">
+            </div>
+            <div class="door-image" id="img5">
+                <img src="img/image5.png" alt="img5">
+            </div>
+            <div class="door-image" id="img6">
+                <img src="img/image6.png" alt="img6">
+            </div>
+            <div class="door-image" id="img7">
+                <img src="img/image7.png" alt="img7">
+            </div>
+            <div class="door-image" id="img8">
+                <img src="img/image8.png" alt="img8">
+            </div>
+            <div class="door-image" id="img9">
+                <img src="img/image9.png" alt="img9">
+            </div>
+            <div class="door-image" id="img10">
+                <img src="img/image10.png" alt="img10">
+            </div>
+            <div class="door-image" id="img11">
+                <img src="img/image11.png" alt="img11">
+            </div>
+            <div class="door-image" id="img12">
+                <img src="img/image12.png" alt="img12">
+            </div>
+            <div class="door-image" id="img13">
+                <img src="img/image13.png" alt="img13">
+            </div>
+            <div class="door-image" id="img14">
+                <img src="img/image14.png" alt="img14">
+            </div>
+            <div class="door-image" id="img15">
+                <img src="img/image15.png" alt="img15">
+            </div>
+            <div class="door-image" id="img16">
+                <img src="img/image16.png" alt="img16">
+            </div>
+            <div class="door-image" id="img17">
+                <img src="img/image17.png" alt="img17">
+            </div>
+            <div class="door-image" id="img18">
+                <img src="img/image18.png" alt="img18">
+            </div>
+            <div class="door-image" id="img19">
+                <img src="img/image19.png" alt="img19">
+            </div>
+            <div class="door-image" id="img20">
+                <img src="img/image20.png" alt="img20">
+            </div>
+            <div class="door-image" id="img21">
+                <img src="img/image21.png" alt="img21">
+            </div>
+            <div class="door-image" id="img22">
+                <img src="img/image22.png" alt="img22">
+            </div>
+            <div class="door-image" id="img23">
+                <img src="img/image23.png" alt="img23">
+            </div>
+            <div class="door-image" id="img24">
+                <img src="img/image24.png" alt="img24">
+            </div>
+            <div class="door-image" id="img25">
+                <img src="img/image25.png" alt="img25">
+            </div>
+            <div class="door-image" id="img26">
+                <img src="img/image26.png" alt="img26">
+            </div>
+            <div class="door-image" id="img27">
+                <img src="img/image27.png" alt="img27">
+            </div>
+            <div class="door-image" id="img28">
+                <img src="img/image28.png" alt="img28">
+            </div>
+            <div class="door-image" id="img29">
+                <img src="img/image29.png" alt="img29">
+            </div>
+            <div class="door-image" id="img30">
+                <img src="img/image30.png" alt="img30">
+            </div>
+            <div class="door-image" id="img31">
+                <img src="img/image31.png" alt="img31">
+            </div>
+            <div class="door-image" id="img32">
+                <img src="img/image32.png" alt="img32">
+            </div>
+        </div> <!-- As portas dinamicamente aparecem aqui -->
+        <button class="voltar-btn" id="voltar-btn">Back</button> <!-- Botão Voltar -->
     </div>
-</div>
+
 <script src="script.js"></script>
 </body>
 </html>
