--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo das Portas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="html%20files/styles.css">
 </head>
 <body>
 <div class="center-btn" id="inicio">
@@ -115,6 +115,6 @@
         <button class="voltar-btn" id="voltar-btn">Back</button> <!-- Botão Voltar -->
     </div>
 
-<script src="script.js"></script>
+<script src="html%20files/script.js"></script>
 </body>
 </html>
